[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-gpt-4o-image"
version = "0.1.0"
description = "GPT-4o Image text-to-image client for RunAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "gpt-4o-image", "text-to-image", "ai", "sdk"]
dependencies = ["runapi-core"]

[project.urls]
Homepage = "https://runapi.ai/models/gpt-4o-image"
Documentation = "https://runapi.ai/docs#sdk-gpt-4o-image"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[tool.uv.sources]
runapi-core = { path = "../runapi-core", editable = true }

[dependency-groups]
dev = ["pytest>=8"]
